Structural redesign